Add a style for html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="main-container">
         <div class="show-letter-container">
             <p class="show-letter">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
+            <p class="show-letter english-letter"></p>
         </div>
     </div>
     <script src="./js/main.js"></script>
