Test keypress if letters in included

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="main-container">
         <div class="show-letter-container">
-            <p class="show-letter">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
-            <p class="show-letter english-letter"></p>
+            <p class="default-mode">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
+            <p class="english-letter"></p>
         </div>
     </div>
     <script src="./js/main.js"></script>
