--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="show-letter-container">
             <p class="default-mode">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
         </div>
+        <input type="text" name="" id="">
     </div>
     <script src="./js/main.js"></script>
 </body>
