Add a textarea to get it work on smart phone

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="show-letter-container">
             <p class="default-mode">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
         </div>
-        <input type="text" name="" id="">
+        <textarea name="" id="myInput" cols="5" rows="1"></textarea>
     </div>
     <script src="./js/main.js"></script>
 </body>
