convert VanillaJS to jQuery

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="show-letter-container">
             <p class="default-mode">أضغط على أي حرف انجليزي لتستمع الى نطقه</p>
         </div>
-        <textarea name="" id="myInput" cols="5" rows="1"></textarea>
+        <input name="" id="myInput" type="text">
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
